--- a/BillMotoChen/aboutme/templates/aboutme/index.html
+++ b/BillMotoChen/aboutme/templates/aboutme/index.html
@@ -30,11 +30,62 @@
 
 <body>
     {% include 'aboutme/include/header.html' %}
+        <!-- Carousel Start -->
+    <br><br>
+    <div class="container-fluid p-0" style="margin-bottom: 90px;">
+        <div id="header-carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="w-100" src="{% static 'aboutme/img/me.jpg' %}" alt="Image" style="width: 900px; height: 1200px;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h2 class="text-white text-uppercase mb-md-3">Bill Moto Chen</h2>
+                            <h3 class="display-1 text-white mb-md-4">Everything About Me is Here</h3>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Find Out More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="{% static 'aboutme/img/prog.jpeg' %}" alt="Image" style="width: 900px; height: 1000px;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h2 class="text-white text-uppercase mb-md-3">Programming Study Note</h2>
+                            <h3 class="display-1 text-white mb-md-4">Some Personal Study Notes About Programming</h3>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="{% static 'aboutme/img/private.jpg' %}" alt="Image" style="width: 900px; height: 1000px;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h2 class="text-white text-uppercase mb-md-3">Private Life</h2>
+                            <h3 class="display-1 text-white mb-md-4">Who I Really Am</h3>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Join My Life</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
+                <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                    <span class="carousel-control-prev-icon mb-n2"></span>
+                </div>
+            </a>
+            <a class="carousel-control-next" href="#header-carousel" data-slide="next">
+                <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                    <span class="carousel-control-next-icon mb-n2"></span>
+                </div>
+            </a>
+        </div>
+    </div>
+    <!-- Carousel End -->
+
+
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
-            <h1 class="display-1 text-primary text-center">What is the site about?</h1>
-            <h1 class="display-4 text-uppercase text-center mb-5">Welcome To <span class="text-primary">Royal Cars</span></h1>
+            <h1 class="display-1 text-primary text-center">About the Site</h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">Welcome To <span class="text-primary">Bill Moto Chen</span></h1>
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
                     <img class="w-75 mb-4" src="" alt="">
@@ -45,25 +96,25 @@
                 <div class="col-lg-4 mb-2">
                     <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-headset text-secondary"></i>
+<!--                            <i class="fa fa-2x fa-headset text-secondary"></i>-->
                         </div>
-                        <h4 class="text-uppercase m-0">24/7 Car Rental Support</h4>
+                        <h4 class="text-uppercase m-0">DUMMY DUMMY</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-2">
                     <div class="d-flex align-items-center bg-secondary p-4 mb-4" style="height: 150px;">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-car text-secondary"></i>
+<!--                            <i class="fa fa-2x fa-car text-secondary"></i>-->
                         </div>
-                        <h4 class="text-light text-uppercase m-0">Car Reservation Anytime</h4>
+                        <h4 class="text-light text-uppercase m-0">KAYU KAYU KAYU</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-2">
                     <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
+<!--                            <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>-->
                         </div>
-                        <h4 class="text-uppercase m-0">Lots Of Pickup Locations</h4>
+                        <h4 class="text-uppercase m-0">BILL BILL BILL</h4>
                     </div>
                 </div>
             </div>
