--- a/BillMotoChen/aboutme/templates/aboutme/index.html
+++ b/BillMotoChen/aboutme/templates/aboutme/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Self Introduction</title>
+    <title>Bill Moto Chen</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
