--- a/BillMotoChen/aboutme/templates/aboutme/include/footer.html
+++ b/BillMotoChen/aboutme/templates/aboutme/include/footer.html
@@ -1,3 +1,4 @@
+   {% load static %}
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
         <div class="row pt-5">
@@ -48,3 +49,16 @@
         <p class="m-0 text-center text-body">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
     </div>
     <!-- Footer End -->
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'aboutme/lib/easing/easing.min.js' %}"></script>
+    <script src="{% static 'aboutme/lib/waypoints/waypoints.min.js' %}"></script>
+    <script src="{% static 'aboutme/lib/owlcarousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'aboutme/lib/tempusdominus/js/moment.min.js' %}"></script>
+    <script src="{% static 'aboutme/lib/tempusdominus/js/moment-timezone.min.js' %}"></script>
+    <script src="{% static 'aboutme/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js' %}"></script>
+
+    <!-- Template Javascript -->
+    <script src="{% static 'aboutme/js/main.js' %}"></script>
