--- a/BillMotoChen/aboutme/templates/aboutme/include/header.html
+++ b/BillMotoChen/aboutme/templates/aboutme/include/header.html
@@ -70,7 +70,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Private</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="team.html" class="dropdown-item">Hobbies</a>
+                                <a href="{% url 'hobbies' %}" class="dropdown-item">Hobbies</a>
                                 <a href="testimonial.html" class="dropdown-item">Travel</a>
                             </div>
                         </div>
