add new model - piece

--- a/BillMotoChen/aboutme/templates/aboutme/hobbies.html
+++ b/BillMotoChen/aboutme/templates/aboutme/hobbies.html
@@ -14,6 +14,16 @@
         <!-- Carousel Start -->
     <br><br>
 
+    <!-- Page Header Start -->
+    <div class="container-fluid hobbies-header">
+        <h1 class="display-3 text-uppercase text-white mb-3">Hobbies</h1>
+        <div class="d-inline-flex text-white">
+            <h6 class="text-uppercase m-0"><a class="text-white" href="{% url 'selfIntroduction' %}">Home</a></h6>
+            <h6 class="text-body m-0 px-3">/</h6>
+            <h6 class="text-uppercase text-body m-0">Hobbies</h6>
+        </div>
+    </div>
+
 {% include 'aboutme/include/footer.html' %}
 
 </body>
