--- a/BillMotoChen/aboutme/static/aboutme/css/style.css
+++ b/BillMotoChen/aboutme/static/aboutme/css/style.css
@@ -128,6 +128,17 @@ h6,
     background-attachment: fixed;
 }
 
+.hobbies-header {
+    height: 300px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(rgba(28, 30, 50, .9), rgba(28, 30, 50, .9)), url(../img/background/hobbies-background.jpeg);
+    background-attachment: fixed;
+}
+
 @media (max-width: 991.98px) {
     .page-header {
         height: 300px;
