--- a/BillMotoChen/aboutme/templates/aboutme/hobbies.html
+++ b/BillMotoChen/aboutme/templates/aboutme/hobbies.html
@@ -24,6 +24,80 @@
         </div>
     </div>
 
+    <!-- Piano -->
+    <section class="first-section">
+    <h1 class="display-3 text-uppercase text-secondary mb-3">Piano</h1>
+        <div class="row pt-5">
+            <div class="col-lg-6 mb-5">
+                <h2>ABC</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </div>
+            <div class="col-lg-6 mb-5">
+                    <div class="bg-secondary p-5">
+                        <h3 class="text-primary text-center mb-4">Check My Favorite Pieces</h3>
+                        <div class="form-group">
+                            <select class="custom-select px-4" style="height: 50px;">
+                                <option selected>Composer</option>
+                                <option value="1">Chopin</option>
+                                <option value="2">Beethoven</option>
+                                <option value="3">Liszt</option>
+                                <option value="4">Bach</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <select class="custom-select px-4" style="height: 50px;">
+                                <option selected>Tonality</option>
+                                <option value="1">C Major</option>
+                                <option value="2">C Minor</option>
+                                <option value="3">Db Major</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <select class="custom-select px-4" style="height: 50px;">
+                                <option selected>Status</option>
+                                <option value="1">Want to Play</option>
+                                <option value="2">Practicing</option>
+                                <option value="3">Memorized but not Mastered</option>
+                                <option value="4">Performable</option>
+                            </select>
+                        </div>
+                        <div class="form-group mb-0">
+                            <button class="btn btn-primary btn-block" type="submit" style="height: 50px;">Check Now</button>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <section class="first-section">
+        <h1 class="display-3 text-uppercase text-secondary mb-3">Card Tricks</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+
+    </section>
+
+    <section class="first-section">
+        <h1 class="display-3 text-uppercase text-secondary mb-3">Rubik's Cube</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+
+    </section>
 {% include 'aboutme/include/footer.html' %}
 
 </body>
