--- a/BillMotoChen/aboutme/static/aboutme/css/style.css
+++ b/BillMotoChen/aboutme/static/aboutme/css/style.css
@@ -324,3 +324,8 @@ h6,
     background: linear-gradient(rgba(28, 30, 50, .9), rgba(28, 30, 50, .9)), url(../img/bg-banner.jpg);
     background-attachment: fixed;
 }
+
+.first-section {
+    width: 80%;
+    margin: 0 auto;
+}
