--- a/BillMotoChen/aboutme/static/aboutme/css/style.css
+++ b/BillMotoChen/aboutme/static/aboutme/css/style.css
@@ -329,3 +329,26 @@ h6,
     width: 80%;
     margin: 0 auto;
 }
+
+#pieces {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#pieces td, #pieces th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#pieces tr:nth-child(even){background-color: #f2f2f2;}
+
+#pieces tr:hover {background-color: #ddd;}
+
+#pieces th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #003366;
+  color: white;
+}
